crates/aranya-policy-compiler/src/hir/visit/snapshots/aranya_policy_compiler__hir__visit__tests__test_action.snap
---
source: crates/aranya-policy-compiler/src/hir/visit/tests.rs
expression: "&visitor.items"
---
[
  {
    "ActionDef": {
      "id": {
        "idx": 1,
        "version": 1
      },
      "span": {
        "start": 1,
        "end": 1
      },
      "ident": {
        "idx": 1,
        "version": 1
      },
      "args": [
        {
          "idx": 1,
          "version": 1
        },
        {
          "idx": 2,
          "version": 1
        }
      ],
      "block": {
        "idx": 1,
        "version": 1
      }
    }
  },
  {
    "ActionArg": {
      "id": {
        "idx": 1,
        "version": 1
      },
      "span": {
        "start": 0,
        "end": 0
      },
      "ident": {
        "idx": 2,
        "version": 1
      },
      "ty": {
        "idx": 1,
        "version": 1
      }
    }
  },
  {
    "Ident": {
      "id": {
        "idx": 2,
        "version": 1
      },
      "span": {
        "start": 0,
        "end": 0
      },
      "ident": "x"
    }
  },
  {
    "VType": {
      "id": {
        "idx": 1,
        "version": 1
      },
      "span": {
        "start": 0,
        "end": 0
      },
      "kind": "Int"
    }
  },
  {
    "ActionArg": {
      "id": {
        "idx": 2,
        "version": 1
      },
      "span": {
        "start": 0,
        "end": 0
      },
      "ident": {
        "idx": 3,
        "version": 1
      },
      "ty": {
        "idx": 2,
        "version": 1
      }
    }
  },
  {
    "Ident": {
      "id": {
        "idx": 3,
        "version": 1
      },
      "span": {
        "start": 0,
        "end": 0
      },
      "ident": "y"
    }
  },
  {
    "VType": {
      "id": {
        "idx": 2,
        "version": 1
      },
      "span": {
        "start": 0,
        "end": 0
      },
      "kind": "String"
    }
  },
  {
    "Block": {
      "id": {
        "idx": 1,
        "version": 1
      },
      "span": {
        "start": 35,
        "end": 35
      },
      "stmts": [
        {
          "idx": 1,
          "version": 1
        }
      ]
    }
  },
  {
    "Stmt": {
      "id": {
        "idx": 1,
        "version": 1
      },
      "span": {
        "start": 35,
        "end": 35
      },
      "kind": {
        "Let": {
          "ident": {
            "idx": 4,
            "version": 1
          },
          "expr": {
            "idx": 3,
            "version": 1
          }
        }
      }
    }
  },
  {
    "Ident": {
      "id": {
        "idx": 4,
        "version": 1
      },
      "span": {
        "start": 0,
        "end": 0
      },
      "ident": "z"
    }
  },
  {
    "Expr": {
      "id": {
        "idx": 3,
        "version": 1
      },
      "span": {
        "start": 0,
        "end": 0
      },
      "kind": {
        "Add": [
          {
            "idx": 1,
            "version": 1
          },
          {
            "idx": 2,
            "version": 1
          }
        ]
      }
    }
  },
  {
    "Expr": {
      "id": {
        "idx": 1,
        "version": 1
      },
      "span": {
        "start": 0,
        "end": 0
      },
      "kind": {
        "Identifier": {
          "idx": 5,
          "version": 1
        }
      }
    }
  },
  {
    "Ident": {
      "id": {
        "idx": 5,
        "version": 1
      },
      "span": {
        "start": 0,
        "end": 0
      },
      "ident": "x"
    }
  },
  {
    "Expr": {
      "id": {
        "idx": 2,
        "version": 1
      },
      "span": {
        "start": 0,
        "end": 0
      },
      "kind": {
        "Int": 1
      }
    }
  }
]
