crates/aranya-policy-compiler/src/hir/visit/snapshots/aranya_policy_compiler__hir__visit__tests__test_command.snap
---
source: crates/aranya-policy-compiler/src/hir/visit/tests.rs
expression: "&visitor.items"
---
[
  {
    "CmdDef": {
      "id": {
        "idx": 1,
        "version": 1
      },
      "span": {
        "start": 1,
        "end": 1
      },
      "ident": {
        "idx": 1,
        "version": 1
      },
      "fields": [
        {
          "idx": 1,
          "version": 1
        },
        {
          "idx": 2,
          "version": 1
        }
      ],
      "seal": {
        "idx": 1,
        "version": 1
      },
      "open": {
        "idx": 2,
        "version": 1
      },
      "policy": {
        "idx": 4,
        "version": 1
      },
      "recall": {
        "idx": 5,
        "version": 1
      }
    }
  },
  {
    "CmdField": {
      "id": {
        "idx": 1,
        "version": 1
      },
      "span": {
        "start": 0,
        "end": 0
      },
      "kind": {
        "Field": {
          "ident": {
            "idx": 2,
            "version": 1
          },
          "ty": {
            "idx": 1,
            "version": 1
          }
        }
      }
    }
  },
  {
    "Ident": {
      "id": {
        "idx": 2,
        "version": 1
      },
      "span": {
        "start": 0,
        "end": 0
      },
      "ident": "a"
    }
  },
  {
    "VType": {
      "id": {
        "idx": 1,
        "version": 1
      },
      "span": {
        "start": 0,
        "end": 0
      },
      "kind": "Int"
    }
  },
  {
    "CmdField": {
      "id": {
        "idx": 2,
        "version": 1
      },
      "span": {
        "start": 0,
        "end": 0
      },
      "kind": {
        "Field": {
          "ident": {
            "idx": 3,
            "version": 1
          },
          "ty": {
            "idx": 2,
            "version": 1
          }
        }
      }
    }
  },
  {
    "Ident": {
      "id": {
        "idx": 3,
        "version": 1
      },
      "span": {
        "start": 0,
        "end": 0
      },
      "ident": "b"
    }
  },
  {
    "VType": {
      "id": {
        "idx": 2,
        "version": 1
      },
      "span": {
        "start": 0,
        "end": 0
      },
      "kind": "String"
    }
  },
  {
    "Block": {
      "id": {
        "idx": 1,
        "version": 1
      },
      "span": {
        "start": 77,
        "end": 77
      },
      "stmts": [
        {
          "idx": 1,
          "version": 1
        }
      ]
    }
  },
  {
    "Stmt": {
      "id": {
        "idx": 1,
        "version": 1
      },
      "span": {
        "start": 77,
        "end": 77
      },
      "kind": {
        "Return": {
          "expr": {
            "idx": 1,
            "version": 1
          }
        }
      }
    }
  },
  {
    "Expr": {
      "id": {
        "idx": 1,
        "version": 1
      },
      "span": {
        "start": 0,
        "end": 0
      },
      "kind": {
        "Optional": null
      }
    }
  },
  {
    "Block": {
      "id": {
        "idx": 2,
        "version": 1
      },
      "span": {
        "start": 102,
        "end": 102
      },
      "stmts": [
        {
          "idx": 2,
          "version": 1
        }
      ]
    }
  },
  {
    "Stmt": {
      "id": {
        "idx": 2,
        "version": 1
      },
      "span": {
        "start": 102,
        "end": 102
      },
      "kind": {
        "Return": {
          "expr": {
            "idx": 2,
            "version": 1
          }
        }
      }
    }
  },
  {
    "Expr": {
      "id": {
        "idx": 2,
        "version": 1
      },
      "span": {
        "start": 0,
        "end": 0
      },
      "kind": {
        "Optional": null
      }
    }
  },
  {
    "Block": {
      "id": {
        "idx": 4,
        "version": 1
      },
      "span": {
        "start": 137,
        "end": 137
      },
      "stmts": [
        {
          "idx": 4,
          "version": 1
        }
      ]
    }
  },
  {
    "Stmt": {
      "id": {
        "idx": 4,
        "version": 1
      },
      "span": {
        "start": 137,
        "end": 137
      },
      "kind": {
        "Finish": {
          "idx": 3,
          "version": 1
        }
      }
    }
  },
  {
    "Block": {
      "id": {
        "idx": 3,
        "version": 1
      },
      "span": {
        "start": 158,
        "end": 158
      },
      "stmts": [
        {
          "idx": 3,
          "version": 1
        }
      ]
    }
  },
  {
    "Stmt": {
      "id": {
        "idx": 3,
        "version": 1
      },
      "span": {
        "start": 158,
        "end": 158
      },
      "kind": {
        "Check": {
          "expr": {
            "idx": 3,
            "version": 1
          }
        }
      }
    }
  },
  {
    "Expr": {
      "id": {
        "idx": 3,
        "version": 1
      },
      "span": {
        "start": 0,
        "end": 0
      },
      "kind": {
        "Bool": true
      }
    }
  },
  {
    "Block": {
      "id": {
        "idx": 5,
        "version": 1
      },
      "span": {
        "start": 198,
        "end": 198
      },
      "stmts": [
        {
          "idx": 5,
          "version": 1
        }
      ]
    }
  },
  {
    "Stmt": {
      "id": {
        "idx": 5,
        "version": 1
      },
      "span": {
        "start": 198,
        "end": 198
      },
      "kind": {
        "Return": {
          "expr": {
            "idx": 4,
            "version": 1
          }
        }
      }
    }
  },
  {
    "Expr": {
      "id": {
        "idx": 4,
        "version": 1
      },
      "span": {
        "start": 0,
        "end": 0
      },
      "kind": {
        "Optional": null
      }
    }
  }
]
